changes for publication

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  useful_classes: 0.0.3
+  scoped_model: ^1.0.1
+  useful_classes: ^0.0.3
 
 dev_dependencies:
   flutter_test:
