Changes in README.md

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: module_provider
-description: Package to facilitate the creation of applications in modules structure
+description: Package to make it easy to build applications in the module structure, with service injection, components and state management with providers.
 version: 1.1.0+1
 author: Ricardo Crescenti <ricardo.crescenti@gmail.com>
 homepage: https://github.com/ricardocrescenti/flutter-module-provider
