Various adjustments to restructure the package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  useful_classes:
+    # path: 'D:\Projetos\CrescentiApps\Packages\Flutter\flutter-useful-classes'
+    git: 
+      url: https://github.com/ricardocrescenti/flutter-useful-classes.git
+      ref: master
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
