--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ build/
 **/android/gradlew.bat
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
+**/android/app/release/
 
 # iOS/XCode related
 **/ios/**/*.mode1v3
