--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -59,6 +59,8 @@ android {
 
     buildTypes {
         release {
+            shrinkResources true
+            minifyEnabled true
             signingConfig signingConfigs.release
         }
     }
