Adjustments made to obsolete widgets

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -3,6 +3,7 @@ description: Example of CounterApp using module_provider
 version: 1.0.0+1
 author: Ricardo Crescenti <ricardo.crescenti@gmail.com>
 homepage: https://github.com/ricardocrescenti/flutter-module-provider/example
+publish_to: none
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
